feat: #163 search changes